# NthOrderMarket-v2

./: .env.example  .gitignore  CLEANUP_NOTES.md  LOGGER_UI_GUIDE.md  MCP_INTELLIGENT_SEARCH.md  QUERY_LOGGER_USAGE.md  QUERY_LOGGING_GUIDE.md  README.md  database.py  db_enrich.py  db_sync.py  export_market_titles.py  intelligent_app.py  intelligent_gemini_bot.py  intelligent_multi_platform_bot.py  kalshi_category_summary.csv  kalshi_database.py  kalshi_top_100_markets.csv  logger_ui.py  main.py  market_categorization_prompt.md  perplexity_check.py  polymarket.db  polymarket_read.db  query_logger.py  requirements.txt  sqlite_previewer.py  test_logger_with_ui.py  test_query_logging.py  update_kalshi_data.py  update_market_data.py
data/: events_first20.csv  market_titles.csv  markets_sampled.csv
prediction-mcp-server/: README.md  install.py  polymarket.db  pyproject.toml  server.yaml  server_config.json
prediction-mcp-server/src/prediction_mcp_server/: __init__.py  cli.py  config.py  database.py  db_sync_service.py  intelligent_gemini_bot.py  market_updater.py  server.py
src/api/: polymarket_client.py
src/chatbot/: bot.py
templates/: index.html  index_backup.html  logger_dashboard.html  logs.html  sql_debugger.html  sqlite_previewer.html
