[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prediction-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Polymarket-style prediction market data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Prediction Data Project"}
]
keywords = ["mcp", "prediction-markets", "polymarket", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
    "mcp>=1.6.0,<2.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.2",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "SQLAlchemy>=2.0.23"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0"
]

[project.urls]
Repository = "https://github.com/jaidevshah/prediction-data"

[project.scripts]
prediction-mcp-server = "prediction_mcp_server.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
